<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/titrePage"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/titrePage"
        android:textSize="25dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/imageButtonPhone"
        android:layout_marginStart="28dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="28dp" />

    <ImageButton
        android:id="@+id/imageButtonPhone"
        android:layout_width="35dp"
        android:layout_height="33dp"
        android:background="?android:attr/colorFocusedHighlight"
        app:srcCompat="@android:drawable/stat_sys_phone_call"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="49dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/numTel"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.789" />

    <TextView
        android:id="@+id/numTel"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/numTel"
        android:layout_marginRight="128dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonPhone"
        android:layout_marginBottom="-8dp" />

    <TextView
        android:id="@+id/presentationPage"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/presentationPage"
        android:textSize="15dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/prenomNom"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="34dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/numTel"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/checkbox"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/presentationPage"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/presentationPage"
        app:layout_constraintHorizontal_bias="0.345"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/presentationPage" />

    <EditText
        android:id="@+id/prenomNom"
        android:enabled="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/prenomNom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/checkbox"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/tel"
        android:enabled="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/tel"
        android:layout_marginTop="8dp"
        android:inputType="phone"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@+id/prenomNom"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/sujet"
        android:enabled="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/sujet"
        android:textStyle="bold"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="165dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tel"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/message"
        android:enabled="true"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/message"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sujet"
        android:layout_marginBottom="8dp"
        android:gravity="top"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="7dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/boutonEnvoyer"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toTopOf="@+id/boutonEnvoyer" />



    <Button
        android:id="@+id/boutonEnvoyer"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="@string/buttonEnvoyer"
        android:textColor="@color/textEnvoyer"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="24dp"
        app:layout_constraintRight_toRightOf="@+id/message" />

    <ImageButton
        android:id="@+id/boutonRetourMenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@mipmap/bouton_retour_menu"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>
