<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.foodtruck.MenuDuJourActivity"
    android:background="@drawable/foodtruck_bg">


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_marginLeft="9dp"
    android:layout_marginStart="9dp">



    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgDuPlat"
        android:layout_width="match_parent"
        android:layout_height="223dp"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/burger01" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:layout_marginTop="11dp"
        android:layout_alignTop="@+id/imgDuPlat"
        android:layout_alignRight="@+id/imgDuPlat"
        android:layout_alignEnd="@+id/imgDuPlat" />


    <EditText
        android:id="@+id/nomDuPlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nom_du_plat_du_jour"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/blanc"
        android:textSize="22sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/descriPlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description_du_plat"
        android:textStyle="bold"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textAlignment="center"
        android:textColor="@color/blanc"
        android:textSize="19sp"
        android:layout_above="@+id/prixHint"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp" />

    <EditText
        android:id="@+id/prixHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/prix"
        android:textStyle="bold"
        android:textColorHint="@android:color/holo_orange_dark"
        android:textAlignment="center"
        android:textColor="@color/blanc"
        android:textSize="20sp"
        android:layout_above="@+id/reserver"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp" />

    <Button
        android:id="@+id/reserver"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:background="@drawable/button_border_white"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/maj"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="41dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/imgDuPlat"
        android:layout_alignStart="@+id/imgDuPlat"
        android:layout_alignRight="@+id/imgDuPlat"
        android:layout_alignEnd="@+id/imgDuPlat" />




</RelativeLayout>