<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/foodtruck_bg"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/latitudeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHint="@color/blanc"
        android:textColorLink="@color/colorPrimary" />

    <EditText
        android:id="@+id/longitudeEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeEdit"
        android:hint="@string/longitude"
        android:inputType="numberDecimal|numberSigned"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHint="@color/blanc"
        android:textColorLink="@color/colorPrimary" />

    <EditText
        android:id="@+id/addressEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/longitudeEdit"
        android:enabled="false"
        android:gravity="top"
        android:hint="@string/adresse"
        android:minLines="4"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:textColor="@android:color/holo_orange_dark"
        android:textColorHint="@color/blanc"
        android:textColorLink="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/addressEdit"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/use_location"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/radioAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/use_address"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorPrimary"
            android:textColorLink="@color/colorPrimary" />
    </RadioGroup>

    <Button
        android:id="@+id/actionButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroup"
        android:layout_gravity="center"
        android:layout_marginTop="116dp"
        android:background="@drawable/button_border_white"
        android:fontFamily="sans-serif-condensed"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="Mettre à jour"
        android:textColor="@android:color/background_light"
        android:textColorLink="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="match_parent"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionButton"/>



    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_below="@+id/infoText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/infoTextLat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="11dp" />

    <TextView
        android:id="@+id/infoTextLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/infoTextLat"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</RelativeLayout>