<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.wcs.foodtruck.RemerciementCommande"
    android:background="@drawable/foodtruck_bg"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/tvRemerciementNom"
        android:layout_width="wrap_content"
        android:layout_height="35dp"

        android:layout_alignBottom="@+id/remerciementMerci"
        android:layout_alignTop="@+id/remerciementMerci"
        android:layout_marginRight="112dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/remerciementMerci"
        android:layout_toRightOf="@+id/remerciementMerci"
        android:textAlignment="viewStart"
        android:textColor="@color/blanc"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="@+id/cadre_merci"
        app:layout_constraintTop_toTopOf="@+id/cadre_merci"
        tools:text="Nom" />

    <TextView
        android:id="@+id/remerciementMerci"

        android:layout_width="81dp"
        android:layout_height="wrap_content"

        android:layout_alignLeft="@+id/btHomeRemerciement"
        android:layout_alignStart="@+id/btHomeRemerciement"
        android:layout_below="@+id/btHomeRemerciement"
        android:text="@string/merci_string"
        android:textAlignment="center"
        android:textColor="@color/textEnvoyer"
        android:textSize="30sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="@+id/cadre_merci"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/cadre_merci"
        app:layout_constraintRight_toLeftOf="@+id/tvRemerciementNom"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/remerciementCommandeValider"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:text="@string/commande_prise_en_compte"
        android:textAlignment="center"
        android:textColor="@color/textEnvoyer"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="31dp"
        app:layout_constraintTop_toBottomOf="@+id/remerciementMerci"
        app:layout_constraintHorizontal_bias="0.494" />

    <TextView
        android:id="@+id/remerciementHeure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/commande_prete_vers"
        android:textColor="@color/textEnvoyer"
        android:textSize="16sp"
        tools:text="12h00"
        app:layout_constraintTop_toTopOf="@+id/preteVers"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/preteVers"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/preteVers"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/cadre_merci"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/preteVers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/commande_prete_vers"
        android:textColor="@color/textEnvoyer"
        android:textSize="16sp"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/remerciementCommandeValider"
        android:layout_marginLeft="36dp"
        app:layout_constraintLeft_toLeftOf="@+id/cadre_merci"
        app:layout_constraintBottom_toBottomOf="@+id/cadre_merci"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/cadre_merci"
        android:layout_width="353dp"
        android:layout_height="267dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cadre_formule" />


</android.support.constraint.ConstraintLayout>
